<resources>
    <string name="app_name">Brain Tear</string>
    <string name="click_to_continue">Click to continue…</string>
    <string name="starting_image_description">StartingImage</string>
    <string name="settings">Settings</string>
    <string name="tictactoe_underlined"><u>TicTacToe</u></string>
    <string name="block_1">block_1</string>
    <string name="block_4">block_4</string>
    <string name="block_7">block_7</string>
    <string name="block_2">block_2</string>
    <string name="block_5">block_5</string>
    <string name="block_8">block_8</string>
    <string name="block_3">block_3</string>
    <string name="block_6">block_6</string>
    <string name="block_9">block_9</string>
    <string name="players">Players</string>
    <string name="wins">Wins</string>
    <string name="scoreboard"><u>Scoreboard</u></string>
    <string name="creator">Sanmesh</string>
    <string name="score_10">10</string>
    <string name="Helper">Yash</string>
    <string name="score_1">1</string>
    <string name="ongoing_match">Ongoing Match:</string>
    <string name="match_12">12</string>
    <string name="player_icon">Player Icon</string>
    <string name="send">Send</string>
    <string name="hello_opponent_ready_to_lose">Hello Opponent, ready to lose?</string>
    <string name="welcome">Welcome!</string>
    <string name="valid_move">ValidMove! </string>
    <string name="wait_for_opponent">Wait for opponent</string>
    <string name="waiting_opponent">Waiting For Opponent to join</string>
    <string name="your_turn">Your Turn</string>
    <string name="opponents_turn">Opponent\'s Turn</string>
    <string name="connect">Connect</string>
    <string name="enter_ip_address">Enter IP address</string>
    <string name="enter_port_and_ip_address_of_server">Enter port and IP address of server</string>
    <string name="_0_0_0_0">0.0.0.0</string>
    <string name="enter_port_number">Enter Port Number</string>
    <string name="_0000">0000</string>
    <string name="incorrect_IP_address">Incorrect IP Address Format</string>
    <string-array name="randomNames">
        <item>Sanmesh</item>
        <item>Akhilesh</item>
        <item>Yash</item>
        <item>Amrit</item>
    </string-array>

</resources>