<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tictactoe_grid"
    android:background="#ffffff"
    android:gravity="center"
    android:columnCount="3"
    android:rowCount="3"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:layout_gravity="center"
    android:useDefaultMargins="true">

    <ImageButton
        android:layout_column="0"
        android:layout_row="0"
        android:id="@+id/block_1"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:scaleType="fitXY"
        android:contentDescription="@string/block_1" />
    <ImageButton
        android:layout_column="0"
        android:layout_row="1"
        android:id="@+id/block_4"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:contentDescription="@string/block_4"/>
    <ImageButton
        android:layout_column="0"
        android:layout_row="2"
        android:id="@+id/block_7"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:contentDescription="@string/block_7"/>
    <ImageButton
        android:layout_column="1"
        android:layout_row="0"
        android:id="@+id/block_2"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:contentDescription="@string/block_2"/>
    <ImageButton
        android:layout_column="1"
        android:layout_row="1"
        android:id="@+id/block_5"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:contentDescription="@string/block_5"/>
    <ImageButton
        android:layout_column="1"
        android:layout_row="2"
        android:id="@+id/block_8"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:src="@drawable/icons8x"
        android:contentDescription="@string/block_8"/>
    <ImageButton
        android:layout_column="2"
        android:layout_row="0"
        android:id="@+id/block_3"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:contentDescription="@string/block_3"/>
    <ImageButton
        android:layout_column="2"
        android:layout_row="1"
        android:id="@+id/block_6"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:contentDescription="@string/block_6"/>
    <ImageButton
        android:layout_column="2"
        android:layout_row="2"
        android:id="@+id/block_9"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:background="@color/black"
        android:contentDescription="@string/block_9"/>
</GridLayout>