<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    android:background="@color/teal_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/scoreboard"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/player_icon"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/players"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_weight="1"
                    android:layout_height="24dp"
                    android:id="@+id/self_icon"
                    tools:src="@drawable/icons8x"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/self_name"
                    android:text="@string/creator"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_weight="1"
                    android:layout_height="24dp"
                    android:id="@+id/opponent_icon"
                    tools:src="@drawable/icons8o"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/opponent_name"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tictactoe_grid_include"
        layout="@layout/tictactoe_board"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notification_feed"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:layout_margin="8dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/scrollable"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/chat_feed_linear_layout">

            </LinearLayout>

        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:id="@+id/input_chat"
                android:autofillHints="Enter a message" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:id="@+id/chat_send_button"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>